# get_listings

./: .env  .gitignore  Dockerfile  Makefile  app.dockerfile  app.py  config.toml  dash.dockerfile  dashboard.py  docker-compose.yml  env.yml  production.env  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  run.py  settings.toml  wsgi.py
.github/workflows/: ci.yml
R/: app.R  dash.R
aluguel/: __init__.py  run.py
aluguel/config/: __init__.py  config.toml  log.py
aluguel/data/: preprocess.py
aluguel/fetcher/: imoveis.py  metro.py
aluguel/fetcher/aux/: __init__.py
aluguel/util/: __init__.py  config.py  context.py  log.py
app/: app.py
app/static/: mystyle.css
app/templates/: home.html  index.html  table.html
app/views/: api.py  home.py  map.py  table.py
backend/: bd.py  clean_data.py  create_or_update_listings.py  extract_new_data.py  get_activated_listings.py  get_listings.py  location.py  metro.py  preprocess.py  request_page.py  settings.py  timeit.py  update_predict.py
config/: browsers.json  config.toml
dashboard/: __init__.py  __main__.py  app.py  callbacks.py  layout.py  models.py  styles.py  utils.py
dashboard/callbacks/: __init__.py  data.py  sidebar.py
dashboard/components/: box.py  carousel.py
dashboard/ext/: __init__.py  database.py  logger.py
dashboard/extensions/: __init__.py  conf.py  database.py  logger.py  serializer.py
dashboard/pages/: __init__.py  map.py  sidebar.py  table.py
data/: model.pkl
data/input/: imoveis.jsonlines  metro.jsonlines  vivareal.jsonlines  zap.jsonlines
data/objects/: ajusta_desc.pkl  onehot.pkl  tfidf.pkl
data/output/: apartamentos.csv  apartamentos.npz  listings.parquet
get_imoveis/: _config.py  _log.py  metro.py  request.py
get_imoveis/data/: preprocess.py
get_imoveis/util/: context.py
get_listings/: _config.py  _log.py  location.py  metro.py  model.py  preprocess.py  request.py
listings/: __init__.py  models.py
listings/backend/: listings.py  location.py  metro.py  model.py  preprocess.py
listings/extensions/: database.py  logger.py  serializer.py
listings/templates/: base.html  home.html  table.html
listings/views/: dashboard.py  home.py  map.py  table.py
modeling/: best_model.py  data.py  optimizer.py
notebooks/: 0.Tratamentos_iniciais.ipynb  1.Exploração.ipynb  2.Model.ipynb  Untitled.ipynb
src/: dash.R  preprocess.py  run.py
src/fetcher/: imoveis_old.py  metro.py  vivareal.py  zap.py
src/fetcher/aux/: __init__.py
templates/: index.html
test/: __init__.py  test_estacoes.py  test_list_locations.py  test_request_page.py
