[tool.poetry]
name = "listings"
version = "0.1.0"
description = ""
authors = ["Douglas Braga <douglasmartinsbraga@gmail.com>"]

[tool.poetry.dependencies]
python = "~=3.8"
geopy = "^~=2.1"
pandas = "~=1.3"
scikit-learn = "~=0.24"
Flask = "~=1.1"
folium = "^~=0.12"
toml = "^~=0.10"
gunicorn = "~=20.1"
lxml = "~=4.6"
requests = "~=2.25"
Flask-SQLAlchemy = "~=2.5"
Flask-Migrate = "~=3.0"
flask-marshmallow = "~=0.14"
marshmallow-sqlalchemy = "~=0.26"
dynaconf = "~=3.1"
python-dotenv = "~=0.18"
psycopg2-binary = "~=2.9"
lightgbm = "~=3.2"

[tool.poetry.dev-dependencies]
mypy = "^~=0.812"
black = "~=20.8b1"
jupyterlab = "~=3.0"
matplotlib = "~=3.3"
xgboost = "~=1.4"
tqdm = "~=4.62"
plotly = "~=5.2"
ipywidgets = "~=7.6"
ray = {extras = ["default"], version = "~=1.6"}
optuna = "~=2.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
