[tool.poetry]
name = "listings"
version = "0.1.0"
description = ""
authors = ["Douglas Braga <douglasmartinsbraga@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
geopy = "2.*"
pandas = "1.*"
scikit-learn = "0.*"
folium = "0.*"
gunicorn = "20*"
lxml = "4.*"
requests = "2.*"
Flask-SQLAlchemy = "2.*"
Flask-Migrate = "3.*"
flask-marshmallow = "0.*"
marshmallow-sqlalchemy = "0.*"
dynaconf = "3.*"
python-dotenv = "0.*"
psycopg2-binary = "2.*"
dash-bootstrap-components = "1.*"
dash-table = "5.*"
lightgbm = "3.*"
toml = "0.*"

[tool.poetry.dev-dependencies]
mypy = "*"
black = "*"
jupyterlab = "3.*"
matplotlib = "3.*"
tqdm = "4.*"
plotly = "5.*"
ipywidgets = "7.*"
optuna = "2.*"
mlflow = "1.*"
xgboost = "1.*"
types-requests = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
