[tool.poetry]
name = "listings"
version = "0.1.0"
description = ""
authors = ["Douglas Braga <douglasmartinsbraga@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
geopy = "2.*"
pandas = "1.*"
scikit-learn = "0.*"
folium = "0.*"
gunicorn = "20.*"
lxml = "4.*"
requests = "2.*"
Flask-SQLAlchemy = "2.*"
Flask-Migrate = "3.*"
flask-marshmallow = "0.*"
marshmallow-sqlalchemy = "0.*"
python-dotenv = "0.*"
psycopg2-binary = "2.*"
dash-bootstrap-components = "1.*"
dash-table = "5.*"
lightgbm = "3.*"
toml = "0.*"
dynaconf = "3.*"

[tool.poetry.dev-dependencies]
mypy = "*"
black = "*"
jupyterlab = "3.*"
matplotlib = "3.*"
tqdm = "4.*"
plotly = "5.*"
ipywidgets = "7.*"
optuna = "2.*"
mlflow = "1.*"
xgboost = "1.*"
types-requests = "*"
pytest = "*"
types-toml = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli_level = "DEBUG"
log_file_level = "DEBUG"
log_file = "test/test.log"
log_cli_format = "%(asctime)s %(levelname)8s (%(name)s:%(lineno)s): %(message)s"
log_file_format = "%(asctime)s %(levelname)8s (%(name)s:%(lineno)s): %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
